<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dip"
        android:text="@string/first_name" >
    </TextView>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/last_name" >
    </TextView>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/account_number" >
    </TextView>

    <EditText
        android:id="@+id/accountNumberEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user_name" >
    </TextView>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password" >
    </TextView>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm_password" >
    </TextView>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:onClick="doRegister"
        android:text="@string/register" >
    </Button>

</LinearLayout>