<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:text="@string/user_name" >
    </TextView>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:text="@string/select_secret_question" >
    </TextView>

    <Spinner
        android:id="@+id/secretQuestionSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/secret_question_answer" >
    </TextView>

    <EditText
        android:id="@+id/secretQuestionAnswerEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="submitAnswer"
        android:text="@string/get_new_password" >
    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:onClick="verifyPasswordResetCode"
        android:text="@string/already_have_reset_code" >
    </Button>

</LinearLayout>