<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:text="@string/from_account" >
    </TextView>

    <EditText
        android:id="@+id/fromAccountEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/to_account" >
    </TextView>

    <EditText
        android:id="@+id/toAccountEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/amount" >
    </TextView>

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:onClick="doTransfer"
        android:text="@string/transfer" >
    </Button>

</LinearLayout>