<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="50dip" 
    	android:text="@string/do_you_want_to_authorize" 
    	android:id="@+id/textView1" 
    	android:layout_gravity="center|left"
    	>
    </TextView>
    <LinearLayout 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:id="@+id/linearLayout1" 
    	android:layout_marginTop="10dip"
    	>
        <Button 
        	android:text="@string/yes" 
        	android:id="@+id/button1" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:onClick="authorizeDevice"
        	>
        </Button>
        <Button 
        	android:text="@string/no" 
        	android:layout_width="wrap_content" 
        	android:layout_gravity="center" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/button2"
        	android:onClick="dontAuthorizeDevice"
        	>
        </Button>
    </LinearLayout>
</LinearLayout>
